fixed border being thick above projects tab on small displays

--- a/style.css
+++ b/style.css
@@ -129,4 +129,8 @@ main {
     #flex-container {
         display: flow
     }
+
+    main {
+        border-style: hidden;
+    }
 }
